--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>COVID-19 Data by dtslr</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/coronavirus.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d2703a8d3b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-
-    <script>
-
-    </script>
+    <meta name="description" content="Get an overview of the cases, deaths and recoveries per country during the fight against COVID-19. #TogetherAgainstCovid19">
+    <meta name="keywords" content="COVID-19, SARS-COV-2, Coronavirus, Information">
+    
 </head>
 
 <body class="has-background-light">
@@ -21,15 +21,9 @@
             </div>
             <div class="level-right">
                 <div class="level-item">
-                    <button class="is-info button"><i class="fas fa-globe-europe"></i></button>
-                </div>
-                <div class="level-item">
-                    <p>or</p>
-                </div>
-                <div class="level-item">
                     <div class="field">
                         <p class="control has-icons-left">
-                            <input type="text" class="input is-info" placeholder="2-Letter Country Code">
+                            <input id="cInput" type="text" class="input is-info" placeholder="2-Letter Country Code">
                             <span class="icon is-left has-text-info">
 
                                 <i class="fas fa-house-user"></i>
@@ -41,7 +35,7 @@
         </div>
 
         <section class="section">
-            <h1 class="title is-5">Country</h1>
+            <h1 id="cName" class="title is-5">Country</h1>
             <div class="box has-background-info has-text-white">
                 <p class="label has-text-white">Infections</p>
                 <article class="media">
@@ -49,7 +43,7 @@
                         <h1 class="title is-4 has-text-white "><i class="fas fa-head-side-virus"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 class="title is-4 has-text-white">123456</h1>
+                        <h1 id="cCases" class="title is-4 has-text-white">123456</h1>
                     </div>
                 </article>
             </div>
@@ -60,7 +54,7 @@
                         <h1 class="title is-4 has-text-white "><i class="fas fa-cross"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 class="title is-4 has-text-white">123456</h1>
+                        <h1 id="cDeath" class="title is-4 has-text-white">123456</h1>
                     </div>
                 </article>
             </div>
@@ -71,63 +65,130 @@
                         <h1 class="title is-4  "><i class="fas fa-shield-virus"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 class="title is-4 ">123456</h1>
+                        <h1 id="cRec" class="title is-4 ">123456</h1>
                     </div>
                 </article>
             </div>
+            <div class="tags has-addons">
+                <span class="tag is-dark">Updated on</span>
+                <span id="cTime" class="tag is-info"></span>
+            </div>
         </section>
-            <section class="section">
-                <h1 class="title is-5">What can I do to prevent spreading?</h1>
-                <div class="box">
-                    <h1 class="subtitle is-5"><i class="fas fa-hands-wash has-text-info"></i>&ThickSpace; Wash your hands frequently with soap and water. Use paper towels or napkins.</h1>
-                </div>
-                <div class="box">
-                    <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-link"></i>&ThickSpace; Keep distance from others. 1,5 metres should be enough.</h1>
-                </div>
-                <div class="box">
-                    <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-info"></i>&ThickSpace; Stay safe at home. No parties or events and limit the number of visitors.</h1>
-                </div>
-                <div class="box">
-                    <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-link"></i>&ThickSpace; Do not shake hands.</h1>
-                </div>
-                <div class="box">
-                    <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-info"></i>&ThickSpace; Cough and sneeze in the inside of your elbow.</h1>
-                </div>
-            </section>
+        <section class="section">
+            <h1 class="title is-5">What can I do to prevent spreading?</h1>
+            <div class="box">
+                <h1 class="subtitle is-5"><i class="fas fa-hands-wash has-text-info"></i>&ThickSpace; Wash your hands
+                    frequently with soap and water. Use paper towels or napkins.</h1>
+            </div>
+            <div class="box">
+                <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-link"></i>&ThickSpace; Keep distance
+                    from others. 1,5 metres should be enough.</h1>
+            </div>
+            <div class="box">
+                <h1 class="subtitle is-5"><i class="fas fa-home has-text-info"></i>&ThickSpace; Stay safe at home. No
+                    parties or events and limit the number of visitors.</h1>
+            </div>
+            <div class="box">
+                <h1 class="subtitle is-5"><i class="fas fa-handshake has-text-link"></i>&ThickSpace; Do not shake hands.
+                </h1>
+            </div>
+            <div class="box">
+                <h1 class="subtitle is-5"><i class="fas fa-head-side-cough has-text-info"></i>&ThickSpace; Cough and
+                    sneeze in the inside of your elbow.</h1>
+            </div>
+        </section>
         <footer class="footer">
             <div class="columns">
                 <div class="column">
                     <h1 class="title is-4"><strong>COVID-19 Data</strong></h1>
-                    <h1 class="subtitle is-5">by <a href="#">Jesper van Daatselaar</a></h1>
-                    <a class="button is-info is-inverted">
+                    <h1 class="subtitle is-5">by <a href=https://dtslr.com">Jesper van Daatselaar</a></h1>
+                    <a href="https://twitter.com/jsprvndtslr" class="button is-info is-inverted">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a class="button is-dark">
+                    <a href="https://dtslr.com" class="button is-dark">
                         <i class="fas fa-address-card"></i>
                     </a>
-                    <a class="button is-info">
+                    <a href="mailto:jesper@dtslr.com" class="button is-info">
                         <i class="fas fa-at"></i></i>
                     </a>
                 </div>
                 <div class="column">
-                    <p>This website is for information purposes only. No rights can be derived from given information.
+                    <p>This website is for information purposes only. <br> No rights can be derived from given information.
                     </p>
                     <br>
-                    <p>For more information about the SARS-CoV-2 <a href="https://www.who.int/">Visit the World Health
+                    <p>For more information <a href="https://www.who.int/">visit the World Health
                             Organisation's site</a></p>
+                            <br>
+                            <p>Created using <a href="https://github.com/NOVELCOVID">NOVELCOVID API</a></a></p>
                 </div>
                 <div class="column">
                     <h1 class="title is-4">Support me</h1>
-                    <h1 class="subtitle is-6">Donations will be funded to the WHO</h1>
-                    <a class="button is-dark">
+                    <h1 class="subtitle is-6">Donate the WHO?</h1>
+                    <a href="https://github.com/dtslr/covid19" class="button is-dark">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a class="button is-info">
-                        <i class="fas fa-hand-holding-usd"></i>
+                    <a href="https://covid19responsefund.org/" class="button is-info">
+                        Help fight COVID-19
                     </a>
                 </div>
             </div>
         </footer>
+
+        <script>
+                let codes = [{ n: "Australia", c: "AU" }, { n: "Bangladesh", c: "BD" }, { n: "Belgium", c: "BE" }, { n: "Brazil", c: "BR" }, { n: "China", c: "CN" }, { n: "Croatia", c: "HR" }, { n: "Denmark", c: "DK" }, { n: "Egypt", c: "EG" }, { n: "France", c: "FR" }, { n: "Germary", c: "DE" }, { n: "India", c: "IN" }, { n: "Iran", c: "IR" }, { n: "Iraq", c: "IQ" }, { n: "Ireland", c: "IE" }, { n: "Italy", c: "IT" }, { n: "Japan", c: "JP" }, { n: "Liechtenstein", c: "LI" }, { n: "Luxembourg", c: "LU" }, { n: "Mexico", c: "MX" }, { n: "Netherlands", c: "NL" }, { n: "Portugal", c: "PT" }, { n: "Russia", c: "RU" }, { n: "South Korea", c: "KR" }, { n: "Sweden", c: "SE" }, { n: "Switzerland", c: "CH" }, { n: "Turkey", c: "TR" }, { n: "United States", c: "US" }];
+
+                let countryInput = document.getElementById("cInput");
+
+                let getCountryData = () => {
+                    let client = new XMLHttpRequest();
+                    client.open("GET", 'https://corona.lmao.ninja/countries', false);
+                    client.send();
+                    let data = JSON.parse(client.responseText);
+                    return data;
+                }
+
+                let getWorldData = () => {
+                    let client = new XMLHttpRequest();
+                    client.open("GET", 'https://corona.lmao.ninja/all', false);
+                    client.send();
+                    let data = JSON.parse(client.responseText);
+                    return data;
+                }
+
+                let getData = () => {
+                    let data = {
+                        country: getCountryData(),
+                        world: getWorldData(),
+                    };
+                    return data;
+                }
+
+                let getArea = () => {
+                    if (codes.filter(code => code.c === countryInput.value)) {
+                        let area = codes.filter(code => code.c === countryInput.value)[0];
+                        if (!area) area = { n: 'World' };
+                        return area;
+
+                    }
+                }
+                countryInput.addEventListener('input', evt => {
+                    let areaName = getArea().n;
+                    let specific = getData().country.filter(data => data.countryInfo.iso2 === getArea().c)[0];
+                    if (!specific) specific = getWorldData();
+                    changeData(areaName, specific.cases, specific.deaths, specific.recovered, specific.updated);
+                })
+
+                let changeData = (areaName, cases, death, recovery, time) => {
+                    let cName = document.getElementById("cName").innerHTML = areaName;
+                    let cCases = document.getElementById("cCases").innerHTML = cases;
+                    let cDeath = document.getElementById("cDeath").innerHTML = death;
+                    let cRec = document.getElementById("cRec").innerHTML = recovery;
+                    let cTime = document.getElementById("cTime").innerHTML = new Date(time).toUTCString();
+                }
+
+                window.onload = changeData("World", getWorldData().cases, getWorldData().deaths, getWorldData().recovered, getWorldData().updated);
+        </script>
 </body>
+
 
 </html>
