--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h1 class="title is-4 has-text-white "><i class="fas fa-head-side-virus"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 id="cCases" class="title is-4 has-text-white">123456</h1>
+                        <h1 id="cCases" class="title is-4 has-text-white">0</h1>
                     </div>
                 </article>
             </div>
@@ -54,7 +54,7 @@
                         <h1 class="title is-4 has-text-white "><i class="fas fa-cross"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 id="cDeath" class="title is-4 has-text-white">123456</h1>
+                        <h1 id="cDeath" class="title is-4 has-text-white">0</h1>
                     </div>
                 </article>
             </div>
@@ -65,7 +65,7 @@
                         <h1 class="title is-4  "><i class="fas fa-shield-virus"></i></h1>
                     </div>
                     <div class="media-content">
-                        <h1 id="cRec" class="title is-4 ">123456</h1>
+                        <h1 id="cRec" class="title is-4 ">0</h1>
                     </div>
                 </article>
             </div>
@@ -78,14 +78,14 @@
             <h1 class="title is-5">What can I do to prevent spreading?</h1>
             <div class="box">
                 <h1 class="subtitle is-5"><i class="fas fa-hands-wash has-text-info"></i>&ThickSpace; Wash your hands
-                    frequently with soap and water. Use paper towels or napkins.</h1>
+                    frequently with soap and water. Use tissue paper to dry.</h1>
             </div>
             <div class="box">
                 <h1 class="subtitle is-5"><i class="fas fa-people-arrows has-text-link"></i>&ThickSpace; Keep distance
-                    from others. 1,5 metres should be enough.</h1>
+                    from others. 1,5 meters should be enough.</h1>
             </div>
             <div class="box">
-                <h1 class="subtitle is-5"><i class="fas fa-home has-text-info"></i>&ThickSpace; Stay safe at home. No
+                <h1 class="subtitle is-5"><i class="fas fa-home has-text-info"></i>&ThickSpace; Stay safe at home. Plan no
                     parties or events and limit the number of visitors.</h1>
             </div>
             <div class="box">
@@ -164,8 +164,8 @@
                 }
 
                 let getArea = () => {
-                    if (codes.filter(code => code.c === countryInput.value)) {
-                        let area = codes.filter(code => code.c === countryInput.value)[0];
+                    if (codes.filter(code => code.c === countryInput.value.toUpperCase())) {
+                        let area = codes.filter(code => code.c === countryInput.value.toUpperCase())[0];
                         if (!area) area = { n: 'World' };
                         return area;
 
