--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COVID-19 Data by dtslr</title>
+    <title>COVID Counter by dtslr</title>
     <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/coronavirus.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d2703a8d3b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <meta name="description" content="Get an overview of the cases, deaths and recoveries per country during the fight against COVID-19. #TogetherAgainstCovid19">
     <meta name="keywords" content="COVID-19, SARS-COV-2, Coronavirus, Information">
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162271359-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-162271359-1');
+    </script>
+
 </head>
 
 <body class="has-background-light">
     <section class="section">
         <div class="level has-text-centered">
             <div class="level-left">
-                <h1 class="title is-3"><i class="fas fa-procedures"></i> &MediumSpace; COVID-19 Data</h1>
+                <h1 class="title is-3"><i class="fas fa-procedures"></i> &MediumSpace; COVID Counter</h1>
             </div>
             <div class="level-right">
                 <div class="level-item">
@@ -100,7 +109,7 @@
         <footer class="footer">
             <div class="columns">
                 <div class="column">
-                    <h1 class="title is-4"><strong>COVID-19 Data</strong></h1>
+                    <h1 class="title is-4"><strong>COVID Counter</strong></h1>
                     <h1 class="subtitle is-5">by <a href=https://dtslr.com">Jesper van Daatselaar</a></h1>
                     <a href="https://twitter.com/jsprvndtslr" class="button is-info is-inverted">
                         <i class="fab fa-twitter"></i>
