--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 class="tag is-danger">0</span></p>
                         <article class="media">
                             <div class="media-left">
-                                <h1 class="title is-4 has-text-white "><i class="fas fa-head-side-virus"></i></h1>
+                                <h1 class="title is-4 has-text-white "><i class="fas fa-lungs-virus"></i></h1>
                             </div>
                             <div class="media-content">
                                 <h1 style="overflow: hidden;" id="cCases" class="title is-4 has-text-white">0</h1>
@@ -62,36 +62,79 @@
                     </div>
                 </div>
                 <div class="column">
-                <div class="box has-background-dark has-text-white">
-                    <p class="label has-text-white">Deaths &ThickSpace; <span id="cTd" class="tag is-danger">0</span>
-                    </p>
-                    <article class="media">
-                        <div class="media-left">
-                            <h1 class="title is-4 has-text-white "><i class="fas fa-cross"></i></h1>
-                        </div>
-                        <div class="media-content">
-                            <h1 style="overflow: hidden;" id="cDeath" class="title is-4 has-text-white">0</h1>
-                        </div>
-                    </article>
-                </div>
+                    <div class="box has-background-dark has-text-white">
+                        <p class="label has-text-white">Deaths &ThickSpace; <span id="cTd"
+                                class="tag is-danger">0</span>
+                        </p>
+                        <article class="media">
+                            <div class="media-left">
+                                <h1 class="title is-4 has-text-white "><i class="fas fa-cross"></i></h1>
+                            </div>
+                            <div class="media-content">
+                                <h1 style="overflow: hidden;" id="cDeath" class="title is-4 has-text-white">0</h1>
+                            </div>
+                        </article>
+                    </div>
                 </div>
                 <div class="column">
-                <div class="box has-background-link">
-                    <p class="label has-text-white ">Countries</p>
-                    <article class="media">
-                        <div class="media-left">
-                            <h1 class="title is-4  has-text-white "><i class="fas fa-globe-europe"></i></h1>
-                        </div>
-                        <div class="media-content">
-                            <h1 style="overflow: hidden;" id="cAff" class="title is-4 has-text-white ">0</h1>
-                        </div>
-                    </article>
+                    <div class="box has-background-link">
+                        <p class="label has-text-white ">Countries</p>
+                        <article class="media">
+                            <div class="media-left">
+                                <h1 class="title is-4  has-text-white "><i class="fas fa-globe-europe"></i></h1>
+                            </div>
+                            <div class="media-content">
+                                <h1 style="overflow: hidden;" id="cAff" class="title is-4 has-text-white ">0</h1>
+                            </div>
+                        </article>
+                    </div>
                 </div>
+            </div>
+            <div class="columns">
+                <div class="column">
+                    <div class="box has-background-dark">
+                        <p class="label has-text-white ">Population</p>
+                        <article class="media">
+                            <div class="media-left">
+                                <h1 class="title is-4  has-text-white "><i class="fas fa-male"></i></h1>
+                            </div>
+                            <div class="media-content">
+                                <h1 style="overflow: hidden;" id="pop" class="title is-4 has-text-white ">0</h1>
+                            </div>
+                        </article>
+                    </div>
                 </div>
+                <div class="column">
+                    <div class="box has-background-link">
+                        <p class="label has-text-white ">Infections / Million</p>
+                        <article class="media">
+                            <div class="media-left">
+                                <h1 class="title is-4  has-text-white "><i class="fas fa-head-side-virus"></i></h1>
+                            </div>
+                            <div class="media-content">
+                                <h1 style="overflow: hidden;" id="cpm" class="title is-4 has-text-white ">0</h1>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box has-background-info">
+                        <p class="label has-text-white ">Tests / Million</p>
+                        <article class="media">
+                            <div class="media-left">
+                                <h1 class="title is-4  has-text-white "><i class="fas fa-vials"></i></h1>
+                            </div>
+                            <div class="media-content">
+                                <h1 style="overflow: hidden;" id="tpm" class="title is-4 has-text-white ">0</h1>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                
             </div>
             <div class="tags has-addons">
                 <span class="tag is-dark">Updated on</span>
-                <span id="cTime" class="tag is-info"></span>
+                <span id="cTime" class="tag is-link">Not updated</span>
             </div>
         </section>
         <section class="section">
@@ -156,7 +199,7 @@
             </div>
         </footer>
 
-        <script src="./master.js"></script>
+        <script src="./master.min.js"></script>
 </body>
 
 
