Add container around whole section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="has-background-light">
-    <section class="section">
+    <section class="section container">
         <div class="level has-text-centered">
             <div class="level-left">
                 <h1 class="title is-3"><i class="fas fa-procedures"></i> &MediumSpace; COVID Counter</h1>
