feat: :art: Added fontawesome
Added fontawesome for icons

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CovidCounter</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/6c19e31162.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
